--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <title>CREATIVES</title>
         
         <link rel="icon" type="image/png" href="images/logobar.png">
-        <link href="css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/media-query.css">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
